--- a/services/nginx/nginx.conf
+++ b/services/nginx/nginx.conf
@@ -3,49 +3,13 @@ upstream dash_app {
 }
 
 server {
+
     listen 80;
-    server_name corona.fabianbosler.de;
-    server_tokens off;
-
-    location /.well-known/acme-challenge/ {
-        root /var/www/certbot;
-    }
 
     location / {
-        return 301 https://$host$request_uri;
+        proxy_pass http://dash_app;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header Host $host;
+        proxy_redirect off;
     }
 }
-
-server {
-    listen 443 ssl;
-    server_name corona.fabianbosler.de;
-    server_tokens off;
-
-    ssl_certificate /etc/letsencrypt/live/example.org/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/example.org/privkey.pem;
-    include /etc/letsencrypt/options-ssl-nginx.conf;
-    ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
-
-    location / {
-        proxy_pass  http://dash_app;
-        proxy_set_header    Host                $http_host;
-        proxy_set_header    X-Real-IP           $remote_addr;
-        proxy_set_header    X-Forwarded-For     $proxy_add_x_forwarded_for;
-    }
-}
-
-; upstream dash_app {
-;     server web:5000;
-; }
-;
-; server {
-;
-;     listen 80;
-;
-;     location / {
-;         proxy_pass http://dash_app;
-;         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-;         proxy_set_header Host $host;
-;         proxy_redirect off;
-;     }
-; }
