--- a/data/nginx/app.conf
+++ b/data/nginx/app.conf
@@ -21,8 +21,8 @@ server {
     server_name corona.fabianbosler.de;
     server_tokens off;
 
-    ssl_certificate /etc/letsencrypt/live/example.org/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/example.org/privkey.pem;
+    ssl_certificate /etc/letsencrypt/live/corona.fabianbosler.de/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/corona.fabianbosler.de/privkey.pem;
     include /etc/letsencrypt/options-ssl-nginx.conf;
     ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
 
