--- a/data/nginx/app.conf
+++ b/data/nginx/app.conf
@@ -28,8 +28,9 @@ server {
 
     location / {
         proxy_pass  http://dash_app;
-        proxy_buffers 16 16k;
-        proxy_buffer_size 16k;
+;         proxy_buffers 16 16k;
+;         proxy_buffer_size 16k;
+        proxy_buffering off;
         proxy_set_header    Host                $http_host;
         proxy_set_header    X-Real-IP           $remote_addr;
         proxy_set_header    X-Forwarded-For     $proxy_add_x_forwarded_for;
